--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,10 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
   timeout: 5000
+  username: railsbug
+  password: 123456
+  host: localhost
+  port: 5432
 
 development:
   <<: *default
@@ -30,19 +34,15 @@ development:
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  username: railsbug
 
   # The password associated with the postgres role (username).
-  password: 123456
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -59,9 +59,6 @@ development:
 test:
   <<: *default
   database: railsbug_test
-  username: railsbug
-  password: 123456
-  port: 5432
 
 
 # As with config/secrets.yml, you never want to store sensitive information,
